cambios agregamos otro parrafo

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <h1>Hola Mundo!</h1>
   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut eveniet et vero accusantium perspiciatis sunt,
     explicabo cupiditate quia qui reprehenderit!</p>
+  <br>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas pariatur sapiente autem officiis possimus? Modi
+    tempore, optio sapiente natus in, repellendus fugiat repellat iste suscipit dicta nisi et quaerat quo!</p>
 </body>
 
 </html>
